--- a/index.css
+++ b/index.css
@@ -6,11 +6,6 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: url(/images/bg.png) no-repeat center center fixed;
-    background-size: cover;
-}
 
 nav{
     background: #FFBE00;
@@ -19,13 +14,19 @@ nav{
     /* position: fixed; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.682)
 }
+@media (max-width:838px) {
+    nav{
+        position: fixed;
+    }
+}
 .dflex{
     display: inline-block;
     padding: auto;
 }
 
 .absolute{
-    position: absolute
+    position: absolute;
+    margin-left: 10px;
 }
 
 label.logo{
@@ -204,7 +205,7 @@ footer {
         text-align: center;
       }
 
-      .social a :hover{
+      .social a:hover{
         transform: scale(1.1);
         transition: ease 0.5s;
       }
