--- a/index.css
+++ b/index.css
@@ -29,17 +29,17 @@ nav{
     margin-left: 10px;
 }
 
-label.logo{
+label.logoy{
     color: rgb(0, 0, 0);
     font-size: 2.188rem;
     line-height: 5rem;
     margin-left: 15px;
 }
 
-label .WebsiteLogo{
+label .Websitelogoy{
     margin-top: 12px;
 }
-.WebsiteLogo{
+.Websitelogoy{
     height: 50px;
     border-radius: 50%;
 }
@@ -49,7 +49,7 @@ label .WebsiteLogo{
     justify-content: space-between;
 }
 
-.web_logo{
+.web_logoy{
     position: absolute;
     margin: 18px 0px 0px 26px;
     height: 50px;
@@ -87,7 +87,7 @@ a.active,a:hover{
     transition: .5s;
 }
 
-.checkbtn{
+.checkbtny{
     font-size: 1.875rem;
     color: rgb(0, 0, 0);
     float: right;
@@ -102,7 +102,7 @@ a.active,a:hover{
 }
 
 @media (max-width: 952px) {
-    label.logo{
+    label.logoy{
         font-size: 30px;
     }
 
@@ -112,7 +112,7 @@ a.active,a:hover{
 }
 
 @media (max-width: 852px) {
-    .checkbtn{
+    .checkbtny{
         display: block;
     }
 
@@ -154,12 +154,12 @@ footer {
         background-color: #FFBE00;
       }
 
-      .web_color {
+      .web_colory {
         color: black;
         font-size: 45px;
       }
 
-      .footer_logo {
+      .footer_logoy {
         display: flex;
         width: 100%;
         height: 120px;
@@ -167,7 +167,7 @@ footer {
         justify-content: center;
       }
 
-      #flogo {
+      #flogoy {
         height: 55px;
       }
 
@@ -205,7 +205,7 @@ footer {
         text-align: center;
       }
 
-      .social a:hover{
+      .socialy a:hover{
         transform: scale(1.1);
         transition: ease 0.5s;
       }
