responsiveness of bmr

--- a/physicalfitness.css
+++ b/physicalfitness.css
@@ -20,8 +20,14 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 10px 10px 20px #00000041, inset -10px -10px 20px #ffffff40;
-        margin: 200px;
+    margin: 200px 200px 100px 200px;
+}
 
+.redirectbtn{
+    margin: auto;
+    display: block;
+    margin-bottom: 180px;
+    
 }
 @media (max-width:1358px) {
     form{
