--- a/bmr.css
+++ b/bmr.css
@@ -5,54 +5,25 @@
     font-family: 'Fira Sans', sans-serif;
 }
 
-body {
-    height: 100vh;
-    background-image: url('images/sbmr.png'); /* Add the correct path to your image */
+body{
+    background-image: url('images/sbmr.png'); 
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow-y: hidden !important;
-    font-family: 'Fira Sans', sans-serif;
-    text-align: center;
-    margin: 20px;
-    display: flex;
-    justify-content: center;
+   background-position: center;
+   background-repeat: no-repeat;
 }
-.home {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    text-decoration: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ffbe00; /* Yellow color */
-    color: black;
-    
-}
-
-.home:hover {
-    background-color: black;
-    color: white;
-}
-
-label {
-    display: block;
-    margin: 10px 0;
-}
-
 .bmr {
-    position: absolute;
-    border-radius: 20px;
-    background-color: rgba(60, 64, 72, 0.8); /* Use rgba for a semi-transparent background */
-    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.219);
-    padding: 40px;
-    width: 400px;
-    margin-top: 60px;
-    margin-top: 6rem;
+    background-color: rgba(60, 64, 72, 0.8); 
+    box-shadow: 17px 20px 20px #000000ab ;
+    width: 50vw;
+    margin: 200px auto;
+    padding: 10px;
+    border-radius: 5px;
 }
-
+@media (max-width:986px) {
+    .bmr{
+        width: 400px;
+    }
+}
 button {
     border: 0;
     outline: none;
@@ -82,13 +53,13 @@ select {
     color: white;
     font-style: bold;
     margin-top: 15px;
+    text-align: center;
 }
 
 select {
     width: 200px;
     height: 30px;
-    padding-left: 80px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .button-block {
@@ -99,5 +70,13 @@ select {
 input {
     width: 200px;
     height: 30px;
-    border-radius: 10px;
+    border-radius: 5px;
+} 
+
+.center{
+    text-align: center;
+}
+
+#result{
+    text-align: center;
 }
