--- a/index.css
+++ b/index.css
@@ -227,14 +227,18 @@ footer {
       }
       .s1{
           width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
       }
       .s1 .mainsubmit{
           display: flex;
           justify-content: space-between;
           width: 300px;
-          position: absolute;
-          top: 70%;
-          margin-left: 4rem;
+          margin-top: 3rem;
+          
+         margin-left: auto;
+         margin-right: auto;
           
       }
       .s1 .mainsubmit .submit_1{
@@ -242,20 +246,24 @@ footer {
        padding-left: 5%;
        padding-right: 5%;
        font-size: 35px;
+      
        background-color: #FFBE00;
        border-radius: 10px;
       }
       .s1 .mainsubmit .submit_1:hover{
-          color: black;
-          background-color: white;
+          color: #ffffff;
+          background-color: rgb(255, 255, 255);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.564); 
       
       }
       .s1 p{
-          color: white;
-          position: absolute;
-          top: 82%;
-          margin-left: 3rem;
-          font-size: 20px;
+          color: rgb(0, 0, 0);
+          font-size: 30px;
+          margin-bottom: 3%;
+          margin-top: 2%;
+          margin-left: auto;
+          margin-right: auto;
+
       }
       .hr1{
           width: 90%;
@@ -377,31 +385,34 @@ footer {
          @media (max-width:930px) {
           .s1 img{
               
-              height: 200px;
+              height: 100%;
               width: auto;
               /* margin-top: 17%; */
           }
           .s1 .mainsubmit{
-              width: 100px;
-              position: absolute;
-              top: 35%;
-              margin-left: 1rem;
+              width: 170px;
+             margin-left: auto;
+             margin-right: auto;
+             margin-top: 3%;
+              
+              
           }
           .s1 .mainsubmit .submit_1{
-              font-size: 10px;
+              font-size: 20px;
               padding: 2px;
               border-radius: 5px;
               padding-left: 5px;
               padding-right: 5px;
           }
           .s1 p{
-          color: rgb(255, 255, 255);
-          width: 200px;
-          top: 15%;
-          margin-left: 10rem;
+          color: rgb(0, 0, 0);
+          width: 100%;
+         margin-left: auto;
+         margin-right: auto;
+          
           font-size: 20px;
           padding: 5%;
-          z-index: 0;
+          
           }
           .hr1{
           width: 90%;
